# ask

./: .gitignore  .session  Cargo.toml  README.md  ask.sh  config.example.json  gptask.sh  hist.sh  output.txt  setup.sh
src/: args.rs  chat.rs  config.rs  main.rs  mod.rs  model.rs  session.rs
src/actions/: completion.rs  hist.rs  mod.rs
