[package]
name = "ask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
ferris-says = "0.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
